Changes for the next release.

--- a/www/test.html
+++ b/www/test.html
@@ -2,6 +2,7 @@
   <head>
   </head>
   <body>
-    Test page.
+    <p>Test page. </p>
+  	<ul><li>a</li><li>b</li><li>c</li></ul>
   </body>
 </html>
