--- a/www/index.html
+++ b/www/index.html
@@ -16,6 +16,6 @@
 <h1>bill-boyer.com</h1>
 <p>I’m Bill Boyer, a software developer, architect and technical leader based in NYC. Most recently, I led software development for Viacom’s digital properties.</p>
 <p>Right now, I’m getting hands-on experience with new web technologies, informally consulting for a few friends, and working on a couple of side projects that interest me &#8212; one of which is this site, a testbed that I'll use to reinforce my understanding of new tools, platforms and best practices.</p>
-<p>Most of what I do here will be basic, and will borrow heavily from innumerable examples, docs, and other resources from all over the web.  I'll do my best to document everything I do, and include links to the resources I've found helpful.</p>
+<p>Most of what I do here will be basic, and will borrow heavily from innumerable examples, docs and other resources from all over the web.  I'll do my best to document everything here, and include links to the resources I've found helpful.</p>
 </body>
 </html>
