Minor fixes to address validator errors/warnings. Google Webmaster Tools verification file.

--- a/www/index.html
+++ b/www/index.html
@@ -1,13 +1,13 @@
 <!doctype html>
-<html>
-<head>
+<html lang="en">
+<head prefix="og: http://ogp.me/ns#">
 <meta charset="UTF-8">
 <link rel="icon" href="/img/favicon.png" type="image/png" />
-<link rel="shortcut icon" href="/img/favicon.png" type="image/png" />
 <link href="/css/main.css" rel="stylesheet" type="text/css">
 <title>bill-boyer.com</title>
-<meta name="description" content="Bill Boyer is a software developer, architect, and technical leader based in NYC." />
+<meta name="description" content="Bill Boyer is a software developer, architect, and technical leader based in NYC.  This is his personal site." />
 <meta property="og:title" content="bill-boyer.com" />
+<meta property="og:description" content="Bill Boyer is a software developer, architect, and technical leader based in NYC.  This is his personal site." />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="http://www.bill-boyer.com" />
 <meta property="og:image" content="http://www.bill-boyer.com/img/boyer.jpg" />
