--- a/src/www/index.html
+++ b/src/www/index.html
@@ -8,6 +8,7 @@
 
 <title>bill-boyer.com</title>
 <meta name="description" content="Bill Boyer is a software developer, architect, and technical leader based in NYC.  This is his personal site." />
+<meta name="keywords" content="bill boyer software developer engineer architect leader manager nyc mtv nickelodeon comedy central viacom web app java javascript C++ SQL media video" />
 <link rel="icon" href="/img/favicon.png" type="image/png" />
 
 <meta property="og:title" content="bill-boyer.com" />
@@ -95,6 +96,14 @@ This panel will appear on every page, briefly describing how the page has been i
 <script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.1/js/bootstrap.min.js"></script>
 
 <script>
+(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+ga('create', 'UA-45564746-1', 'bill-boyer.com');
+ga('send', 'pageview');
+  
 $(function (){
 $("#page-info").popover({placement: "top"});
 });
