--- a/src/www/index.html
+++ b/src/www/index.html
@@ -23,7 +23,9 @@
 </head>
 
 <body>
+<div class="container">
 
+<div class="row">
 <nav class="navbar navbar-default" role="navigation">
 
 <div class="navbar-header">
@@ -33,22 +35,24 @@
 <span class="icon-bar"></span>
 <span class="icon-bar"></span>
 </button>
-<a class="navbar-brand" href="/">bill-boyer.com</a>
+<a href="/"><p class="navbar-brand">bill-boyer.com</p></a>
 </div>
 
 <div class="collapse navbar-collapse" id="navbar-collapse">
 <ul class="nav navbar-nav navbar-right">
-<li><a href="#">about me</a></li>
-<li><a href="#">about this site</a></li>
-<li><a href="#">demos</a></li>
+<li><a href="#">About Me</a></li>
+<li><a href="#">About This Site</a></li>
+<li><a href="#">Demos</a></li>
 </ul>
 </div>
 
 </nav>
+</div>
 
+<div class="row">
 <div class="col-lg-10 col-lg-push-2">
 
-<h1>welcome</h1>
+<h1>Welcome</h1>
 
 <p>I’m Bill Boyer, a software developer, architect and technical leader based in NYC. Most recently, I led software development for Viacom’s digital properties.</p>
 
@@ -56,23 +60,21 @@
 
 <p>Most of what I do here will be basic, and will borrow heavily from innumerable examples, docs and other resources from all over the web.  I'll do my best to document everything here, and include links to the resources I've found helpful.</p>
 
-<h2>profiles on other sites</h2>
+<h2>Profiles on Other Sites</h2>
 
-<p>
 <ul>
 <li><a href="http://www.linkedin.com/pub/william-boyer/67/93a/a99">LinkedIn</a></li>
 <li><a href="https://plus.google.com/107831511220447646083?rel=author">Google+</a></li>
 <li><a href="https://www.facebook.com/william.boyer.nyc">Facebook</a></li>
 <li><a href="https://github.com/wboyer">GitHub</a></li>
 </ul>
-</p>
 
 </div>
 
 <div class="col-lg-2 col-lg-pull-10">
       
 <div class="panel panel-default">
-<div class="panel-heading">about this page</div>
+<div class="panel-heading">About This Page</div>
 <div class="panel-body">
 This panel will appear on every page, briefly describing how the page has been implemented.  The "more..." button will open an overlay with more detailed information. 
 <br/>
@@ -82,7 +84,7 @@ This panel will appear on every page, briefly describing how the page has been i
 </div>
 
 <div class="panel panel-default">
-<div class="panel-heading">share</div>
+<div class="panel-heading">Share</div>
 <div class="panel-body">
 <button type="button" class="btn btn-default"><span class="glyphicon glyphicon-share"></span></button>
 <button type="button" class="btn btn-default"><span class="glyphicon glyphicon-share"></span></button>
@@ -90,6 +92,7 @@ This panel will appear on every page, briefly describing how the page has been i
 </div>  
 </div>
 
+</div>
 </div>
 
 <script src="http://code.jquery.com/jquery.js"></script>
@@ -109,5 +112,7 @@ $("#page-info").popover({placement: "top"});
 });
 </script>
 
+</div>
 </body>
 </html>
+
