Preparing to use Sass/Compass.

--- a/src/www/index.html
+++ b/src/www/index.html
@@ -17,7 +17,7 @@
 <meta property="og:url" content="http://www.bill-boyer.com" />
 <meta property="og:image" content="http://www.bill-boyer.com/img/boyer.jpg" />
 
-<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.1/css/bootstrap.min.css">
+<link href="/css/style.css" rel="stylesheet" type="text/css">
 <link href="/css/main.css" rel="stylesheet" type="text/css">
 
 </head>
