Homepage now powered by Rails, and themes menu by Angular.

--- a/src/www/index.html
+++ b/src/www/index.html
@@ -17,7 +17,7 @@
 <meta property="og:url" content="http://www.bill-boyer.com" />
 <meta property="og:image" content="http://www.bill-boyer.com/img/boyer.jpg" />
 
-<script src="/js/site.min.js"></script>
+<script src="/js/head.min.js"></script>
 <link href="/css/override.css" rel="stylesheet" type="text/css" />
 </head>
 
