--- a/src/www/index.html
+++ b/src/www/index.html
@@ -18,7 +18,7 @@
 <meta property="og:image" content="http://www.bill-boyer.com/img/boyer.jpg" />
 
 <script src="/js/head.min.js"></script>
-<link href="/css/override.css" rel="stylesheet" type="text/css" />
+<link href="/css/site.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
