--- a/src/www/index.html
+++ b/src/www/index.html
@@ -3,130 +3,178 @@
 
 <head prefix="og: http://ogp.me/ns#">
 
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width">
 
-<title>bill-boyer.com</title>
-<meta name="description" content="Bill Boyer is a software developer, architect, and technical leader based in NYC.  This is his personal site." />
-<meta name="keywords" content="bill boyer software developer engineer architect leader manager nyc mtv nickelodeon comedy central viacom web app java javascript C++ SQL media video" />
-<link rel="icon" href="/img/favicon.png" type="image/png" />
+	<title>bill-boyer.com</title>
+	<meta name="description"
+		  content="Bill Boyer is a software developer, architect, and technical leader based in NYC.  This is his personal site."/>
+	<meta name="keywords"
+		  content="bill boyer software developer engineer architect leader manager nyc mtv nickelodeon comedy central viacom web app java javascript C++ SQL media video"/>
+	<link rel="icon" href="/img/favicon.png" type="image/png"/>
 
-<meta property="og:title" content="bill-boyer.com" />
-<meta property="og:description" content="Bill Boyer is a software developer, architect, and technical leader based in NYC.  This is his personal site." />
-<meta property="og:type" content="website" />
-<meta property="og:url" content="http://www.bill-boyer.com" />
-<meta property="og:image" content="http://www.bill-boyer.com/img/boyer.jpg" />
+	<meta property="og:title" content="bill-boyer.com"/>
+	<meta property="og:description"
+		  content="Bill Boyer is a software developer, architect, and technical leader based in NYC.  This is his personal site."/>
+	<meta property="og:type" content="website"/>
+	<meta property="og:url" content="http://www.bill-boyer.com"/>
+	<meta property="og:image" content="http://www.bill-boyer.com/img/boyer.jpg"/>
 
-<script src="/js/head.min.js"></script>
-<link href="/css/site.css" rel="stylesheet" type="text/css" />
+	<script src="/js/head.min.js"></script>
+	<link href="/css/site.css" rel="stylesheet" type="text/css"/>
 </head>
 
 <body>
 <div class="container">
 
-<div class="row">
-<nav class="navbar navbar-default" role="navigation">
+	<div class="row">
+		<nav class="navbar navbar-default" role="navigation">
 
-<div class="navbar-header">
-<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse">
-<span class="sr-only">Toggle navigation</span>
-<span class="icon-bar"></span>
-<span class="icon-bar"></span>
-<span class="icon-bar"></span>
-</button>
-<a href="/"><p class="navbar-brand">bill-boyer.com</p></a>
-</div>
+			<div class="navbar-header">
+				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse">
+					<span class="sr-only">Toggle navigation</span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+				</button>
+				<a href="/"><p class="navbar-brand">bill-boyer.com</p></a>
+			</div>
 
-<div class="collapse navbar-collapse" id="navbar-collapse">
-<ul class="nav navbar-nav navbar-right">
-<li><a href="#" onclick="return false;">About Me</a></li>
-<li><a href="#" onclick="return false;">About This Site</a></li>
-<li><a href="#" onclick="return false;">Demos</a></li>
-<li class="dropdown">
-	<a class="dropdown-toggle" data-toggle="dropdown" href="#">
-                    Themes <span class="caret"></span>
-    </a>
-	<ul id="themes-menu" class="dropdown-menu">
-    	<li data-theme="default"><a href="#" onclick="Site.Util.setTheme(this.parentNode); return false;">Theme 1</a></li>
-        <li data-theme="amelia"><a href="#" onclick="Site.Util.setTheme(this.parentNode); return false;">Theme 2</a></li>
-        <li data-theme="cerulean"><a href="#" onclick="Site.Util.setTheme(this.parentNode); return false;">Theme 3</a></li>
-        <li data-theme="cosmo"><a href="#" onclick="Site.Util.setTheme(this.parentNode); return false;">Theme 4</a></li>
-        <li data-theme="cyborg"><a href="#" onclick="Site.Util.setTheme(this.parentNode); return false;">Theme 5</a></li>
-        <li data-theme="darkly"><a href="#" onclick="Site.Util.setTheme(this.parentNode); return false;">Theme 6</a></li>
-        <li data-theme="flatly"><a href="#" onclick="Site.Util.setTheme(this.parentNode); return false;">Theme 7</a></li>
-        <li data-theme="journal"><a href="#" onclick="Site.Util.setTheme(this.parentNode); return false;">Theme 8</a></li>
-        <li data-theme="lumen"><a href="#" onclick="Site.Util.setTheme(this.parentNode); return false;">Theme 9</a></li>
-        <li data-theme="readable"><a href="#" onclick="Site.Util.setTheme(this.parentNode); return false;">Theme 10</a></li>
-        <li data-theme="simplex"><a href="#" onclick="Site.Util.setTheme(this.parentNode); return false;">Theme 11</a></li>
-        <li data-theme="slate"><a href="#" onclick="Site.Util.setTheme(this.parentNode); return false;">Theme 12</a></li>
-        <li data-theme="spacelab"><a href="#" onclick="Site.Util.setTheme(this.parentNode); return false;">Theme 13</a></li>
-        <li data-theme="superhero"><a href="#" onclick="Site.Util.setTheme(this.parentNode); return false;">Theme 14</a></li>
-        <li data-theme="united"><a href="#" onclick="Site.Util.setTheme(this.parentNode); return false;">Theme 15</a></li>
-        <li data-theme="yeti"><a href="#" onclick="Site.Util.setTheme(this.parentNode); return false;">Theme 16</a></li>
-	</ul>
-</li>
-</ul>
-</div>
+			<div class="collapse navbar-collapse" id="navbar-collapse">
+				<ul class="nav navbar-nav navbar-right">
+					<li><a href="#" onclick="return false;">About Me</a></li>
+					<li><a href="#" onclick="return false;">About This Site</a></li>
+					<li><a href="#" onclick="return false;">Demos</a></li>
+					<li class="dropdown">
+						<a class="dropdown-toggle" data-toggle="dropdown" href="#">
+							Themes <span class="caret"></span>
+						</a>
+						<ul id="themes-menu" class="dropdown-menu">
+							<li data-theme="default"><a href="#"
+														onclick="Site.Util.setTheme(this.parentNode); return false;">Theme
+								1</a></li>
+							<li data-theme="amelia"><a href="#"
+													   onclick="Site.Util.setTheme(this.parentNode); return false;">Theme
+								2</a></li>
+							<li data-theme="cerulean"><a href="#"
+														 onclick="Site.Util.setTheme(this.parentNode); return false;">Theme
+								3</a></li>
+							<li data-theme="cosmo"><a href="#"
+													  onclick="Site.Util.setTheme(this.parentNode); return false;">Theme
+								4</a></li>
+							<li data-theme="cyborg"><a href="#"
+													   onclick="Site.Util.setTheme(this.parentNode); return false;">Theme
+								5</a></li>
+							<li data-theme="darkly"><a href="#"
+													   onclick="Site.Util.setTheme(this.parentNode); return false;">Theme
+								6</a></li>
+							<li data-theme="flatly"><a href="#"
+													   onclick="Site.Util.setTheme(this.parentNode); return false;">Theme
+								7</a></li>
+							<li data-theme="journal"><a href="#"
+														onclick="Site.Util.setTheme(this.parentNode); return false;">Theme
+								8</a></li>
+							<li data-theme="lumen"><a href="#"
+													  onclick="Site.Util.setTheme(this.parentNode); return false;">Theme
+								9</a></li>
+							<li data-theme="readable"><a href="#"
+														 onclick="Site.Util.setTheme(this.parentNode); return false;">Theme
+								10</a></li>
+							<li data-theme="simplex"><a href="#"
+														onclick="Site.Util.setTheme(this.parentNode); return false;">Theme
+								11</a></li>
+							<li data-theme="slate"><a href="#"
+													  onclick="Site.Util.setTheme(this.parentNode); return false;">Theme
+								12</a></li>
+							<li data-theme="spacelab"><a href="#"
+														 onclick="Site.Util.setTheme(this.parentNode); return false;">Theme
+								13</a></li>
+							<li data-theme="superhero"><a href="#"
+														  onclick="Site.Util.setTheme(this.parentNode); return false;">Theme
+								14</a></li>
+							<li data-theme="united"><a href="#"
+													   onclick="Site.Util.setTheme(this.parentNode); return false;">Theme
+								15</a></li>
+							<li data-theme="yeti"><a href="#"
+													 onclick="Site.Util.setTheme(this.parentNode); return false;">Theme
+								16</a></li>
+						</ul>
+					</li>
+				</ul>
+			</div>
 
-</nav>
-</div>
+		</nav>
+	</div>
 
-<div class="row">
-<div class="col-lg-9 col-lg-push-3">
+	<div class="row">
+		<div class="col-lg-9 col-lg-push-3">
 
-<h1>Welcome</h1>
+			<h1>Welcome</h1>
 
-<p>I’m Bill Boyer, a software developer, architect and technical leader based in NYC. Most recently, I led software development for Viacom’s digital properties.</p>
+			<p>I’m Bill Boyer, a software developer, architect and technical leader based in NYC. Most recently, I led
+				software development for Viacom’s digital properties.</p>
 
-<p>Right now, I’m getting hands-on experience with new web technologies, informally consulting for a few friends, and working on a couple of side projects that interest me &#8212; one of which is this site, a testbed that I'll use to reinforce my understanding of new tools, platforms and best practices.</p>
+			<p>Right now, I’m getting hands-on experience with new web technologies, informally consulting for a few
+				friends, and working on a couple of side projects that interest me &#8212; one of which is this site, a
+				testbed that I'll use to reinforce my understanding of new tools, platforms and best practices.</p>
 
-<p>Most of what I do here will be basic, and will borrow heavily from innumerable examples, docs and other resources from all over the web.  I'll do my best to document everything here, and include links to the resources I've found helpful.</p>
+			<p>Most of what I do here will be basic, and will borrow heavily from innumerable examples, docs and other
+				resources from all over the web. I'll do my best to document everything here, and include links to the
+				resources I've found helpful.</p>
 
-<h2>Profiles on Other Sites</h2>
+			<h2>Profiles on Other Sites</h2>
 
-<ul>
-<li><a href="http://www.linkedin.com/pub/william-boyer/67/93a/a99">LinkedIn</a></li>
-<li><a href="https://plus.google.com/107831511220447646083?rel=author">Google+</a></li>
-<li><a href="https://www.facebook.com/william.boyer.nyc">Facebook</a></li>
-<li><a href="https://github.com/wboyer">GitHub</a></li>
-</ul>
+			<ul>
+				<li><a href="http://www.linkedin.com/pub/william-boyer/67/93a/a99">LinkedIn</a></li>
+				<li><a href="https://plus.google.com/107831511220447646083?rel=author">Google+</a></li>
+				<li><a href="https://www.facebook.com/william.boyer.nyc">Facebook</a></li>
+				<li><a href="https://github.com/wboyer">GitHub</a></li>
+			</ul>
 
-</div>
+		</div>
 
-<div class="col-lg-3 col-lg-pull-9 left-col">
-      
-<div class="panel panel-default">
-<div class="panel-heading">About This Page</div>
-<div class="panel-body">
-This panel will appear on every page, briefly describing how the page has been implemented.  The "more..." button will open an overlay with more detailed information. 
-<br/>
-<br/>
-<button id="page-info" type="button" class="btn btn-default" style="float: right" rel="popover" data-content="coming soon"><span class="glyphicon glyphicon-info-sign"></span> more...</button>
-</div>  
-</div>
+		<div class="col-lg-3 col-lg-pull-9 left-col">
 
-<div class="panel panel-default">
-<div class="panel-heading">Share</div>
-<div class="panel-body">
-<button type="button" class="btn btn-default"><span class="glyphicon glyphicon-share"></span></button>
-<button type="button" class="btn btn-default"><span class="glyphicon glyphicon-share"></span></button>
-<button type="button" class="btn btn-default"><span class="glyphicon glyphicon-share"></span></button>
-</div>  
-</div>
+			<div class="panel panel-default">
+				<div class="panel-heading">About This Page</div>
+				<div class="panel-body">
+					This panel will appear on every page, briefly describing how the page has been implemented. The
+					"more..." button will open an overlay with more detailed information.
+					<br/>
+					<br/>
+					<button id="page-info" type="button" class="btn btn-default" style="float: right" rel="popover"
+							data-content="coming soon"><span class="glyphicon glyphicon-info-sign"></span> more...
+					</button>
+				</div>
+			</div>
 
-</div>
-</div>
+			<div class="panel panel-default">
+				<div class="panel-heading">Share</div>
+				<div class="panel-body">
+					<button type="button" class="btn btn-default"><span class="glyphicon glyphicon-share"></span>
+					</button>
+					<button type="button" class="btn btn-default"><span class="glyphicon glyphicon-share"></span>
+					</button>
+					<button type="button" class="btn btn-default"><span class="glyphicon glyphicon-share"></span>
+					</button>
+				</div>
+			</div>
 
-<div class="row">
-<div class="panel panel-default">
-<div class="panel-body">
-<footer>
-<h5>Credits</h5>
-<p>Built with <a href="http://getbootstrap.com/">Bootstrap</a>. CSS themes from <a href="http://bootswatch.com/">Bootswatch</a>, by <a href="http://thomaspark.me">Thomas Park</a>.</p>
-</footer>
-</div>
-</div>
-</div>
+		</div>
+	</div>
+
+	<div class="row">
+		<div class="panel panel-default">
+			<div class="panel-body">
+				<footer>
+					<h5>Credits</h5>
+					<p>Built with <a href="http://getbootstrap.com/">Bootstrap</a>. CSS themes from <a
+							href="http://bootswatch.com/">Bootswatch</a>, by <a href="http://thomaspark.me">Thomas
+						Park</a>.</p>
+				</footer>
+			</div>
+		</div>
+	</div>
 
 </div>
 
@@ -138,17 +186,24 @@ This panel will appear on every page, briefly describing how the page has been i
 </script>
 
 <script>
-(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+	(function(i, s, o, g, r, a, m) {
+		i['GoogleAnalyticsObject'] = r;
+		i[r] = i[r] || function() {
+			(i[r].q = i[r].q || []).push(arguments)
+		}, i[r].l = 1 * new Date();
+		a = s.createElement(o),
+				m = s.getElementsByTagName(o)[0];
+		a.async = 1;
+		a.src = g;
+		m.parentNode.insertBefore(a, m)
+	})(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
 
-ga('create', 'UA-45564746-1', 'bill-boyer.com');
-ga('send', 'pageview');
-  
-$(function (){
-$("#page-info").popover({placement: "top"});
-});
+	ga('create', 'UA-45564746-1', 'bill-boyer.com');
+	ga('send', 'pageview');
+
+	$(function() {
+		$("#page-info").popover({placement: "top"});
+	});
 </script>
 
 </body>
