Improved social stuff.

--- a/src/www/index.html
+++ b/src/www/index.html
@@ -18,7 +18,7 @@
 		  content="Bill Boyer is a software developer, architect, and technical leader based in NYC.  This is his personal site."/>
 	<meta property="og:type" content="website"/>
 	<meta property="og:url" content="http://www.bill-boyer.com"/>
-	<meta property="og:image" content="http://www.bill-boyer.com/img/boyer.jpg"/>
+	<meta property="og:image" content="http://www.bill-boyer.com/img/boyer-og-1910x1000.jpg" />
 
 	<script src="/js/head.min.js"></script>
 	<link href="/css/site.css" rel="stylesheet" type="text/css"/>
